--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
 
     <string name="temperatureText" translatable="false">%1$s\u2103</string>
     <string name="live_data_description">Data refresh every 5\"</string>
+    <string name="humidityText" translatable="false">%1$s\%%</string>
 </resources>
